; ModuleID = '/home/carl/AnghaBench/h2o/lib/common/extr_url.c_parse_scheme.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/common/extr_url.c_parse_scheme.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"http:\00", align 1
@H2O_URL_SCHEME_HTTP = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [7 x i8] c"https:\00", align 1
@H2O_URL_SCHEME_HTTPS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i8*, i32**)* @parse_scheme to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @parse_scheme(i8* %0, i8* %1, i32** %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32**, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32** %2, i32*** %7, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = ptrtoint i8* %8 to i64
  %11 = ptrtoint i8* %9 to i64
  %12 = sub i64 %10, %11
  %13 = icmp sge i64 %12, 5
  br i1 %13, label %14, label %22

14:                                               ; preds = %3
  %15 = load i8*, i8** %5, align 8
  %16 = call i64 @memcmp(i8* %15, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 5)
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %14
  %19 = load i32**, i32*** %7, align 8
  store i32* @H2O_URL_SCHEME_HTTP, i32** %19, align 8
  %20 = load i8*, i8** %5, align 8
  %21 = getelementptr inbounds i8, i8* %20, i64 5
  store i8* %21, i8** %4, align 8
  br label %39

22:                                               ; preds = %14, %3
  %23 = load i8*, i8** %6, align 8
  %24 = load i8*, i8** %5, align 8
  %25 = ptrtoint i8* %23 to i64
  %26 = ptrtoint i8* %24 to i64
  %27 = sub i64 %25, %26
  %28 = icmp sge i64 %27, 6
  br i1 %28, label %29, label %37

29:                                               ; preds = %22
  %30 = load i8*, i8** %5, align 8
  %31 = call i64 @memcmp(i8* %30, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i32 6)
  %32 = icmp eq i64 %31, 0
  br i1 %32, label %33, label %37

33:                                               ; preds = %29
  %34 = load i32**, i32*** %7, align 8
  store i32* @H2O_URL_SCHEME_HTTPS, i32** %34, align 8
  %35 = load i8*, i8** %5, align 8
  %36 = getelementptr inbounds i8, i8* %35, i64 6
  store i8* %36, i8** %4, align 8
  br label %39

37:                                               ; preds = %29, %22
  br label %38

38:                                               ; preds = %37
  store i8* null, i8** %4, align 8
  br label %39

39:                                               ; preds = %38, %33, %18
  %40 = load i8*, i8** %4, align 8
  ret i8* %40
}

declare dso_local i64 @memcmp(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
